@@ -38,6 +38,18 @@
       </schema>
       
       <schema>
+      <key>/schemas/apps/procman/smooth_refresg</key>
+      <applyto>/apps/procman/smooth_refresh</applyto>
+      <owner>procman</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Enable/Disable smooth refresh</short>
+        <long></long>
+      </locale>
+      </schema>
+
+      <schema>
       <key>/schemas/apps/procman/kill_dialog</key>
       <applyto>/apps/procman/kill_dialog</applyto>
       <owner>procman</owner>
