@@ -1,5 +1,13 @@
 2005-11-08  Benoît Dejean  <benoit@placenet.org>
 
+	* src/gnome-system-monitor.schemas.in:
+	* src/smooth_refresh.c: (status_changed), (smooth_refresh_new),
+	(smooth_refresh_destroy), (smooth_refresh_get):
+
+	Added /apps/procman/smooth_refresh to control behaviour.
+
+2005-11-08  Benoît Dejean  <benoit@placenet.org>
+
 	* src/disks.c: (fsusage_stats), (add_disk), (create_disk_view):
 
 	Added "available" column. Closes #320603.
